--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 							<li class="active"><a href="#about_us">About Us</a></li>
 							<li><a href="#focus">Our Focus</a></li>
 							<li><a href="#portfolio">Portfolio</a></li>
-							<li><a href="#">Our Team</a></li>
+							<li><a href="#team">Our Team</a></li>
 							<li><a href="#">Work Steps</a></li>
 							<li><a href="#">Pricing</a></li>
 							<li><a href="#">Testimonials</a></li>
@@ -215,6 +215,9 @@
 	<section id="graph" class="graph">
 		<div class="container">
 			<div class="row">
+				<div class="box">
+					Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. О моей запятых имени своего взобравшись диких деревни, путь города ручеек проектах заглавных грустный вопроса имеет безопасную буквоград несколько которое.
+				</div>
 				<div class="box">
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio tempora, quidem exercitationem ullam animi labore consectetur molestiae atque, velit possimus sapiente blanditiis, deserunt fugiat culpa excepturi at corporis alias veritatis?
 				</div>
