--- a/index.html
+++ b/index.html
@@ -216,7 +216,9 @@
 		<div class="container">
 			<div class="row">
 				<div class="box">
-					Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. О моей запятых имени своего взобравшись диких деревни, путь города ручеек проектах заглавных грустный вопроса имеет безопасную буквоград несколько которое.
+					Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. О моей запятых имени своего взобравшись диких деревни, путь города ручеек проектах заглавных грустный вопроса имеет безопасную буквоград несколько которое. <br><br>
+					Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Запятых злых, имени, предложения которой себя сих продолжил океана даже. По всей свой собрал текстов языком. Правилами, жизни приставка! Грустный, от всех! <br><br>
+					Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Жизни маленькая повстречался, языкового свое напоивший, моей взгляд реторический, буквоград назад, строчка проектах мир коварный букв курсивных коварных. Встретил, пор!
 				</div>
 				<div class="box">
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio tempora, quidem exercitationem ullam animi labore consectetur molestiae atque, velit possimus sapiente blanditiis, deserunt fugiat culpa excepturi at corporis alias veritatis?
