--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<meta name="theme-color" content="#ffffff">
 	<title>Alexis</title>
 	<link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,700|Poppins:300,400,500,600,700" rel="stylesheet">
+	<link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="manifest" href="./manifest.webmanifest">
@@ -218,7 +219,8 @@
 				<div class="box">
 					Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. О моей запятых имени своего взобравшись диких деревни, путь города ручеек проектах заглавных грустный вопроса имеет безопасную буквоград несколько которое. <br><br>
 					Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Запятых злых, имени, предложения которой себя сих продолжил океана даже. По всей свой собрал текстов языком. Правилами, жизни приставка! Грустный, от всех! <br><br>
-					Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Запятых злых, имени, предложения которой себя сих продолжил океана даже. По всей свой собрал текстов языком. Правилами, жизни приставка! Грустный, от всех! <br><br>
+					Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Путь вершину эта агенство которой букв дал реторический подпоясал лучше что жаренные свой меня своего пустился живет его, мир если!<br><br>
+					Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Путь вершину эта агенство которой букв дал реторический подпоясал лучше что жаренные свой меня своего пустился живет его, мир если!
 				</div>
 				<div class="box">
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio tempora, quidem exercitationem ullam animi labore consectetur molestiae atque, velit possimus sapiente blanditiis, deserunt fugiat culpa excepturi at corporis alias veritatis?
@@ -226,9 +228,8 @@
 			</div>
 		</div>
 	</section>
-	<script src="https://use.fontawesome.com/f31a423d80.js"></script>
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 	<script type="text/javascript" src="js/myscript.js"></script>
-		
+
 </body>
 </html>
